Update cyber attack simulator

--- a/cyberattacksim_gui/templates/base.html
+++ b/cyberattacksim_gui/templates/base.html
@@ -37,7 +37,7 @@
             <span></span>
             <span></span>
         </div>
-        <h2 class="head">Yawning Titan</h2>
+        <h2 class="head">CyberAttackSim</h2>
         <div class="flex-break"></div>
         {% block top-buttons %}
         {% endblock %}
